--- a/loginsignup.html
+++ b/loginsignup.html
@@ -30,7 +30,7 @@
                 <input type="email" name="gebruikersmail" id="email" required>
                 <label for="password">Wachtwoord</label>
                 <input type="password" name="wachtwoord" id="password" required>
-                <label for="password"><a href="loginsignup.html">Wachtwoord vergeten?</a> </label>
+                <a href="loginsignup.html">Wachtwoord vergeten?</a>
                 <button type="submit" value="login">LOGIN</button>
             </fieldset>
             <fieldset>
