--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="DFDS verhalen website">
     <meta name="author" content="Wouter Bijnsdorp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/initial%20style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>DFDStories</title>
     <link rel="shortcut icon" href="images/favicon.png" />
     <!-- Bron: Icon van https://www.dfdsseaways.nl/ gecropt -->
@@ -44,12 +44,6 @@
         </form>
     </header>
     <main>
-        <article>
-            <header>
-                <h1>Welkom!</h1>
-            </header>
-            <p>Op de DFDS site voor het lezen van verhalen terwijl je op reis bent. Bij je profiel kan je gedownloade verhalen lezen als je die hebt gedownload, en bij zoeken kan je dat leuke verhaal vinden van de vorige keer!</p>
-            <a href="index.html"> Begrepen</a> </article>
         <article>
             <header>
                 <i>rating</i>
