--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1>Welkom!</h1>
             </header>
             <p>Op de DFDS site voor het lezen van verhalen terwijl je op reis bent. Bij je profiel kan je gedownloade verhalen lezen als je die hebt gedownload, en bij zoeken kan je dat leuke verhaal vinden van de vorige keer!</p>
-            <a href="index.html"> Begrepen</a> </article>
+            <a href="index2.html"> Begrepen</a> </article>
         <article>
             <header>
                 <i>rating</i>
